# solidation

./: .codespellrc  .pre-commit-config.yaml  LICENSE  README.md  setup.cfg  solidation.yaml  tox.ini
.github/workflows/: lint.yml  smoke-test.yml  test.yml  typing.yml
code/: healthcheck.py
src/solidation/: __init__.py  __main__.py
src/solidation/tests/: test_main.py
tests/: test_main.py
