[metadata]
name = solidation
#version = # Extracted from tags by versioningit
description = Produce activities reports from GitHub
long_description = file:README.md
long_description_content_type = text/markdown
author = Center for Open Neuroscience
author_email = debian@onerussian.com
license = MIT
license_files = LICENSE
url = https://github.com/con/solidation

keywords =
    ###

classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    License :: OSI Approved :: MIT License
    ###
    Typing :: Typed

project_urls =
    Source Code = https://github.com/con/solidation
    Bug Tracker = https://github.com/con/solidation/issues

[options]
packages = find_namespace:
package_dir =
    =src
include_package_data = True
python_requires = >= 3.8
install_requires =
    PyGithub ~= 1.55

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    solidation = solidation.__main__:main
