[metadata]
name = solidation
#version = # Extracted from tags by versioningit
description = Produce activities reports from GitHub
long_description = file:README.md
long_description_content_type = text/markdown
author = Center for Open Neuroscience
author_email = debian@onerussian.com
license = MIT
license_files = LICENSE
url = https://github.com/con/solidation

keywords =
    ###

classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    License :: OSI Approved :: MIT License
    ###
    Typing :: Typed

project_urls =
    Source Code = https://github.com/con/solidation
    Bug Tracker = https://github.com/con/solidation/issues

[options]
packages = find_namespace:
package_dir =
    =src
include_package_data = True
python_requires = >= 3.8
install_requires =
    click >= 8.0
    click-loglevel ~= 0.2
    pydantic ~= 1.7
    PyGithub ~= 1.55
    ruamel.yaml ~= 0.15

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    solidation = solidation.__main__:main

[mypy]
allow_incomplete_defs = False
allow_untyped_defs = False
ignore_missing_imports = True
# <https://github.com/python/mypy/issues/7773>:
no_implicit_optional = True
implicit_reexport = False
local_partial_types = True
pretty = True
show_error_codes = True
show_traceback = True
strict_equality = True
warn_redundant_casts = True
warn_return_any = True
warn_unreachable = True
plugins = pydantic.mypy

[pydantic-mypy]
init_forbid_extra = True
warn_untypes_fields = True
